--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,26 @@
 	<version>0.5.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
+	<name>Functional Utils</name>
+	<desscription>Functional Utility Classes for working with Java 5+</description>
+	<url>https://github.com/ToToTec/de.tototec.utils.functional</url>
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<scm>
+		<url>https://github.com/ToToTec/de.tototec.utils.functional</url>
+	</scm>
+	<developers>
+		<developer>
+			<name>Tobias Roeser</name>
+			<email>le.petit.fou@web.de</email>
+		</developer>
+	</developers>
+
 	<properties>
 		<maven.compiler.source>1.5</maven.compiler.source>
 		<maven.compiler.target>1.5</maven.compiler.target>
