Converted tests to use LambdaTest

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
 			<version>6.8</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>de.tototec</groupId>
+			<artifactId>de.tobiasroeser.lambdatest</artifactId>
+			<version>0.1.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
