--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
 			<groupId>de.tototec</groupId>
 			<artifactId>de.tobiasroeser.lambdatest</artifactId>
 			<version>0.1.0</version>
+			<classifier>java6</classifier>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
