--- a/pom.xml
+++ b/pom.xml
@@ -81,8 +81,19 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>2.2.0</version>
+				<version>3.0.1</version>
 				<extensions>true</extensions>
+				<executions>
+					<execution>
+						<phase>verify</phase>
+						<goals>
+							<goal>baseline</goal>
+						</goals>
+						<configuration>
+							<failOnError>false</failOnError>
+						</configuration>
+					</execution>
+				</executions>
 				<configuration>
 					<unpackBundle>true</unpackBundle>
 					<instructions>
