--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,9 +43,20 @@ jobs:
 #          token: ${{ secrets.CODECOV_TOKEN }}
 #        continue-on-error: true
 
+  check-mima:
+    runs-on: ubuntu-latest
+     - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-java@v4
+        with:
+          java-version: 8
+          distribution: temurin
+      - run: ./millw -i -k mima.mimaReportBinaryIssues
+
   publish:
     if: github.repository == 'ToToTec/de.tototec.utils.functional'  && github.ref == 'refs/heads/main' && github.event_name == 'push'
-    needs: [build]
+    needs: [build, check-mima]
     runs-on: ubuntu-latest
 
     steps:
