--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,7 @@ jobs:
 
   check-mima:
     runs-on: ubuntu-latest
+    steps:
      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
